fix auto input zoom on safari mobile

--- a/src/css/style.css
+++ b/src/css/style.css
@@ -55,7 +55,7 @@ html, body {
 	min-height: 100%;
 }
 
-input {
+input, select {
     font-size: 100%;
 }
 
